--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head> <link href="style.css" rel="stylesheet"></head>
 
     <body>
-        <h1>THANIEL IS A GOONER</h1>
+        <h1>THANIEL IS A GOONER</h1> <br>
+        <h2>PP ALONG</h2>
     </body>
 
 </html>
