--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
     <head> <link href="style.css" rel="stylesheet"></head>
 
     <body>
-        <h1>THANIEL IS A GOONER</h1> <br>
-        <h2>PP ALONG</h2>
+        <div>
+            <h1>THANIEL IS A GOONER</h1> <br>
+            <h2>PP ALONG</h2>
+        </div>
+        <div>
+            <h1 class="bash">TEBASTIAN IS A SLEEPER</h1>
+
+        </div>
+        
     </body>
 
 </html>
